--- a/config_files/uuii.yml
+++ b/config_files/uuii.yml
@@ -30,10 +30,11 @@ experiment:
         restore: False
       epochs: 200
       batch_size: 1024
-      factors: 64
+      factors: 64160 
       lr: [ 0.0001, 0.0005, 0.001, 0.005, 0.01 ]
       l_w: [ 1e-5, 1e-2 ]
       n_ii_layers: [1, 2, 3, 4]
+      n_ui_layers: [1, 2, 3, 4]
       sim: [dot, min, max, global]
       loader: ('SentimentInteractionsTextualAttributesUUII',)
       seed: 123
